--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.1.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "mongodb": "^3.5.9",
     "mongoose": "^6.0.12",
     "next": "latest",
